appId: com.weroster
---
- launchApp
- waitForAnimationToEnd

# Perform login
- tapOn: "Email"
- inputText: "a@gmail.com"
- tapOn: "Password"
- inputText: "password"
- tapOn: "Login"
- waitForAnimationToEnd
